--- a/demo/dev.html
+++ b/demo/dev.html
@@ -5,19 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="https://unpkg.com/hyperhtml@2.13.0/min.js"></script>
 </head>
 <body>
     <div>
         <script type="module" src="../litter-g.js"></script>
         <litter-g></litter-g>
-        <script nomodule>
+        <!-- <script nomodule>
             const litterG = ({arithmetic, b, c}) => `
                 ${arithmetic}
             `
-        </script>
+        </script>-->
         <div data-litter-g>
-            
+            <script></script>
         </div>
         
     </div>
