--- a/demo/dev.html
+++ b/demo/dev.html
@@ -11,11 +11,11 @@
         <script type="module" src="../litter-g.js"></script>
         <litter-g></litter-g>
         
-        <div data-litter-g>
+        <ul data-litter-g>
             <script nomodule>
                 html`${input.map((i) => html`<li>${i}</li>`)}`
             </script>
-        </div>
+        </ul>
         
     </div>
     <script>
