--- a/demo/litter-gz-test.html
+++ b/demo/litter-gz-test.html
@@ -21,15 +21,16 @@
             </script>
     </div>
 
-    <!-- <ul data-lit data-input='["He", "She", "They", "Ze"]'>
+    <ul data-lit data-input='["He", "She", "They", "Ze"]'>
         <script nomodule>
             html`${input.map(i => html`<li>${i}</li>`)}`
         </script>
-    </ul> -->
+    </ul>
 
     <script type="module" src="../litter-gz.js"></script>
     <script>
         long_lat.latitude = 100;
+        long_lat.longitude = 50;
     </script>
 </body>
 
