--- a/demo/dev.iife.html
+++ b/demo/dev.iife.html
@@ -17,7 +17,7 @@
             </script>
         </ul>
         
-        <script type="module" src="../litter-g.js"></script>
+        <script type="module" src="../litter-g.iife.js"></script>
     </div>
     
 </body>
