--- a/demo/litter-gz-test.html
+++ b/demo/litter-gz-test.html
@@ -21,13 +21,8 @@
             </script>
     </div>
 
-    <ul data-lit data-input='["He", "She", "They", "Ze"]'>
-        <script nomodule>
-            html`${input.map(i => html`<li>${i}</li>`)}`
-        </script>
-    </ul>
 
-    <script type="module" src="../litter-gz.js"></script>
+    <script type="module" src="../litter-gz.iife.js"></script>
     <script>
         long_lat.latitude = 41.903878;
         long_lat.longitude = 12.452818;
