--- a/demo/index.html
+++ b/demo/index.html
@@ -35,6 +35,13 @@
                 </script>
         </div>
 
+        <in-the-node>
+            <script nomodule>
+                //Test litter-gz
+                var test = require("litter-g/test/litter-gz-test1.js");
+            </script>
+        </in-the-node>
+
         <style>
             .fieldInput{
                 display:flex;
@@ -45,6 +52,7 @@
         <script type="module" src="../litter-gz.iife.js"></script>
         <script type="module" src="https://unpkg.com/wired-elements@latest/dist/wired-elements.bundled.min.js"></script>
         <script type="module" src="https://unpkg.com/p-d.p-u@0.0.61/p-d.p-u.js"></script>
+        <script type="module" src="https://unpkg.com/in-the-node@0.0.5/in-the-node.iife.js"></script>
     </div>
 </body>
 
