--- a/demo/litter-gz-test.html
+++ b/demo/litter-gz-test.html
@@ -13,7 +13,7 @@
 
     <div data-lit id="long_lat">
             <script nomodule>
-                return ({latitude, longitude}) => html`
+                ({latitude, longitude}) => html`
                     <a href="http://www.gps-coordinates.org/my-location.php?lat=${latitude}&lng=${longitude}" target="_blank">
                         (${latitude},${longitude})
                     </a> 
