fixing import issue, better vscode integration

--- a/demo/dev.html
+++ b/demo/dev.html
@@ -12,6 +12,7 @@
         <litter-g></litter-g>
         
         <ul id="pronouns" data-lit data-input='["He", "She", "They", "Ze"]'>
+            <li>I am here</li>
             <script nomodule>
                 html`${input.map((item, idx) => html`<li id="li_${idx}">${item}</li>`)}`
             </script>
