--- a/demo/dev.html
+++ b/demo/dev.html
@@ -14,7 +14,7 @@
         <ul id="pronouns" data-lit data-input='["He", "She", "They", "Ze"]'>
             <li>I am here</li>
             <script nomodule>
-                html`${input.map((item, idx) => html`<li id="li_${idx}">${item}</li>`)}`
+                html`${_input.map((item, idx) => html`<li id="li_${idx}">${item}</li>`)}`
             </script>
         </ul>
         
