--- a/demo/index.html
+++ b/demo/index.html
@@ -11,25 +11,25 @@
 <body>
     <div>
         <litter-gz></litter-gz>
-        <ul data-lit data-input='["He", "She", "They", "Ze"]'>
+        <!-- <ul data-lit data-input='["He", "She", "They", "Ze"]'>
                 <script nomodule>
-                    html`${input.map((i) => html`<li>${i}</li>`)}`
+                    html`${_input.map((i) => html`<li>${i}</li>`)}`
                 </script>
-        </ul>
+        </ul> -->
 
         <div>Latutide: </div>
-        <wired-input aria-placeholder="Latitude" placeholder="Latitude" value="41.903878"></wired-input>
-        <p-d on="input" to="#long_lat{latitude}" m="1"></p-d>
+        <input aria-placeholder="Latitude" placeholder="Latitude" value="41.903878">
+        <p-d on="input" to="#long_lat" prop="_latitude" m="1"></p-d>
 
         <div>Longitude:</div>
-        <wired-input aria-placeholder="Longitude" placholder="Longitude" data- value="12.452818"></wired-input>
-        <p-d on="input" to="#long_lat{longitude}" m="1"></p-d>
+        <input aria-placeholder="Longitude" placholder="Longitude" value="12.452818">
+        <p-d on="input" to="#long_lat" prop="_longitude" m="1"></p-d>
         
         <div data-lit id="long_lat">
             <script nomodule>
-                ({latitude, longitude}) => html`
-                    <a href="http://www.gps-coordinates.org/my-location.php?lat=${latitude}&lng=${longitude}" target="_blank">
-                        (${latitude},${longitude})
+                tr = ({_latitude, _longitude}) => html`
+                    <a href="http://www.gps-coordinates.org/my-location.php?lat=${_latitude}&lng=${_longitude}" target="_blank">
+                        (${_latitude},${_longitude})
                     </a> 
                 `;
             </script>
@@ -42,11 +42,11 @@
                 flex-direction: row;
             }
         </style>
-        <!-- <script type="module" src="https://unpkg.com/litter-g@0.0.13/litter-gz.iife.js?module"></script> -->
-        <script type="module" src="../litter-gz.iife.js"></script>
-        <script type="module" src="https://unpkg.com/wired-elements@latest/dist/wired-elements.bundled.min.js"></script>
-        <script type="module" src="https://unpkg.com/p-d.p-u@0.0.61/p-d.p-u.js"></script>
-        <script type="module" src="https://unpkg.com/in-the-node@0.0.5/in-the-node.iife.js"></script>
+        <!-- <script type="module" src="https://unpkg.com/litter-g@0.0.19/litter-gz.js?module"></script> -->
+        <!-- <script type="module" src="../litter-gz.iife.js"></script> -->
+        <script type="module" src="../litter-gz.js"></script>
+        <!-- <script type="module" src="https://unpkg.com/wired-elements@latest/dist/wired-elements.bundled.min.js"></script> -->
+        <script type="module" src="https://unpkg.com/p-d.p-u@0.0.105/p-d.js?module"></script>
     </div>
 </body>
 
