--- a/demo/dev.html
+++ b/demo/dev.html
@@ -18,8 +18,19 @@
             </script>
         </ul>
         
-        <script type="module" src="../litter-g.js"></script>
     </div>
-    
+        <!-- Use experimental import maps -->
+        <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
+        <script type="importmap-shim">
+        {
+          "imports": {
+            "xtal-element/": "../node_modules/xtal-element/",
+            "trans-render/": "../node_modules/trans-render/"
+          }
+        }
+        </script>
+        <script  type="module-shim">
+            import '../litter-g.js';
+        </script>
 </body>
 </html>
