--- a/demo/dev.html
+++ b/demo/dev.html
@@ -25,12 +25,13 @@
         {
           "imports": {
             "xtal-element/": "../node_modules/xtal-element/",
-            "trans-render/": "../node_modules/trans-render/"
+            "trans-render/": "../node_modules/trans-render/",
+            "lit-html/": "../node_modules/lit-html/"
           }
         }
         </script>
         <script  type="module-shim">
-            import '../litter-g.js';
+            import '../litter-gz.js';
         </script>
 </body>
 </html>
