temp checkin -- not functioning

--- a/demo/dev.html
+++ b/demo/dev.html
@@ -34,7 +34,7 @@
         }
         </script>
         <script  type="module-shim">
-            import '../litter-gz.js';
+            import '../litter-g.js';
         </script>
 </body>
 </html>
