--- a/test/fly-g.html
+++ b/test/fly-g.html
@@ -23,6 +23,11 @@
             html`${_input.map((statement) => html`<p id="whyP" @click="${handleClick}"  mark>${statement}</p>`)}`
         </script>
     </div>
+    <script>
+        setTimeout(() =>{
+            whyP.click();
+        }, 3000)
+    </script>
     <!-- Use experimental import maps -->
     <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
     <script type="importmap-shim">
