--- a/test/fly-g.html
+++ b/test/fly-g.html
@@ -28,6 +28,19 @@
             whyP.click();
         }, 3000)
     </script>
+
+    <div id=wriggled data-lit>
+        <script nomodule>
+            tr = (_s1, _s2, _s3) => html`<p mark>${_s1}</p><p mark>${_s2}</p><p>${_s3}`
+        </script>
+    </div>
+    <script>
+        setTimeout(() =>{
+            wriggled._s1 = 'That wriggled and jiggled and tickled inside her!';
+            wriggled._s2 = 'She swallowed the spider to catch the fly;';
+            wriggled._s3 = 'I don\'t know why she swallowed a fly - Perhaps she\'ll die!';
+        }, 3000)
+    </script>    
     <!-- Use experimental import maps -->
     <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
     <script type="importmap-shim">
