--- a/test/fly-g.html
+++ b/test/fly-g.html
@@ -31,7 +31,7 @@
 
     <div id=wriggled data-lit>
         <script nomodule>
-            tr = (_s1, _s2, _s3) => html`<p mark>${_s1}</p><p mark>${_s2}</p><p>${_s3}`
+            tr = (_s1, _s2, _s3) => html`<p mark>${_s1}</p><p mark>${_s2}</p><p mark>${_s3}`
         </script>
     </div>
     <script>
