--- a/test/fly-g.html
+++ b/test/fly-g.html
@@ -31,7 +31,7 @@
 
     <div id=wriggled data-lit>
         <script nomodule>
-            tr = (_s1, _s2, _s3) => html`<p mark>${_s1}</p><p mark>${_s2}</p><p mark>${_s3}`
+            tr = (_s1, _s2, _s3) => html`<p mark>${_s1}</p><p mark>${_s2}</p><p mark>${_s3}</p>`
         </script>
     </div>
     <script>
@@ -40,7 +40,22 @@
             wriggled._s2 = 'She swallowed the spider to catch the fly;';
             wriggled._s3 = 'I don\'t know why she swallowed a fly - Perhaps she\'ll die!';
         }, 3000)
-    </script>    
+    </script>
+    <div id=bird data-lit>
+        <script nomodule>
+            function handleClick2(){
+                console.log
+            }
+            //render
+            tr = (_s1, _s2, _s3) => html`<p mark @click="${handleClick2}">${_s1}</p><p mark>${_s2}</p><p mark>${_s3}</p>`
+        </script>
+    </div>
+    <script>
+        setTimeout(() =>{
+            bird._s1 = 'There was an old lady who swallowed a bird; ';
+            bird._s2 = 'How absurd to swallow a bird!';
+        }, 3000)
+    </script>     
     <!-- Use experimental import maps -->
     <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
     <script type="importmap-shim">
