--- a/demo/cdn.html
+++ b/demo/cdn.html
@@ -17,7 +17,7 @@
         </ul>
 
         <label>
-            Latutide:
+            Latitude:
             <input aria-placeholder=Latitude placeholder=Latitude value=41.903878>
             <!-- pass down (p-d) input value to _latitude property of div-->
             <p-d on=input to=[-_latitude] from=label  m=1></p-d>
@@ -48,6 +48,10 @@
             .fieldInput{
                 display:flex;
                 flex-direction: row;
+            }
+            label{
+                display:flex;
+                flex-direction:row;
             }
         </style>
         <script type="module" src="https://unpkg.com/litter-g@0.0.31/litter-g.js?module"></script>
