--- a/demo/dev.html
+++ b/demo/dev.html
@@ -10,9 +10,9 @@
     <div>
         
         
-        <ul id="pronouns" data-lit data-input='["He", "She", "They", "Other"]'>
+        <ul id="pronouns" data-input='["He", "She", "They", "Other"]'>
             <li>I am here</li>
-            <script nomodule>
+            <script nomodule data-lit >
                 function clickHandler(e){
                     console.log(e);
                 }
