--- a/test/fly-g.html
+++ b/test/fly-g.html
@@ -6,13 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div data-lit data-input='["There was an old lady who swallowed a fly"]'>
-        <script nomodule>
+    <div data-input='["There was an old lady who swallowed a fly"]'>
+        <script nomodule data-lit>
             html`${_input.map((statement) => html`<p mark>${statement}</p>`)}`
         </script>
     </div>
-    <div id=whyDiv data-lit data-input='["I don&apos;t know why she swallowed a fly; perhaps she&apos;ll die."]'>
-        <script nomodule>
+    <div id=whyDiv data-input='["I don&apos;t know why she swallowed a fly; perhaps she&apos;ll die."]'>
+        <script nomodule data-lit>
             function handleClick(){
                 const el = document.createElement('p');
                 el.setAttribute('mark', '');
@@ -29,8 +29,8 @@
         }, 3000)
     </script>
 
-    <div id=wriggled data-lit>
-        <script nomodule>
+    <div id=wriggled>
+        <script nomodule data-lit>
             tr = (_s1, _s2, _s3) => html`<p ?mark="${_s1}">${_s1}</p><p ?mark="${_s2}">${_s2}</p><p ?mark="${_s3}">${_s3}</p>`
         </script>
     </div>
@@ -41,8 +41,8 @@
             wriggled._s3 = 'I don\'t know why she swallowed a fly - Perhaps she\'ll die!';
         }, 3000)
     </script>
-    <div id=bird data-lit>
-        <script nomodule>
+    <div id=bird>
+        <script nomodule data-lit>
             function handleClick2(){
                 console.log('in handleClick2');
             }
