--- a/demo/cdn.html
+++ b/demo/cdn.html
@@ -10,8 +10,8 @@
 
 <body>
     <div>
-        <ul data-lit data-input='["He", "She", "They", "Ze"]'>
-                <script nomodule>
+        <ul  data-input='["He", "She", "They", "Other"]'>
+                <script nomodule data-lit>
                     html`${_input.map((i) => html`<li>${i}</li>`)}`
                 </script>
         </ul>
@@ -33,8 +33,8 @@
         </label>
 
         
-        <div -_latitude -_longitude data-lit>
-            <script nomodule>
+        <div -_latitude -_longitude >
+            <script nomodule data-lit>
                 tr = ({_latitude, _longitude}) => html`
                     <a href="http://www.gps-coordinates.org/my-location.php?lat=${_latitude}&lng=${_longitude}" target="_blank">
                         (${_latitude},${_longitude})
@@ -54,8 +54,8 @@
                 flex-direction:row;
             }
         </style>
-        <script type="module" src="https://unpkg.com/litter-g@0.0.31/litter-g.js?module"></script>
-        <script type="module" src="https://unpkg.com/p-et-alia@0.0.70/p-d.js?module"></script>
+        <script type="module" src="https://unpkg.com/litter-g@0.0.32/litter-g.js?module"></script>
+        <script type="module" src="https://unpkg.com/p-et-alia@0.0.73/p-d.js?module"></script>
     </div>
 </body>
 
