--- a/demo/dev2.html
+++ b/demo/dev2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <litter-g2></litter-g2>
+    <litter-g2 input='["He", "She", "They", "Other"]'></litter-g2>
     <ul>
         <li>header list item</li>
         <script nomodule>
