--- a/demo/dev2.html
+++ b/demo/dev2.html
@@ -14,6 +14,17 @@
         </script>
         <li>footer list item</li>
     </ul>
+
+
+    <litter-g2 id=pronounList></litter-g2>
+    <ul>
+        <script nomodule>html`${input.map(i => html`<li>${i}</li>`)}`</script>
+    </ul>
+    ...
+    <script>
+        pronounList.input = ["He", "She", "They", "Other"];
+    </script>
+
     <!-- Use experimental import maps -->
     <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
     <script type="importmap-shim">
