--- a/demo/dev.html
+++ b/demo/dev.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <litter-g input='["He", "She", "They", "Other"]'></litter-g>
+    <litter-g input='["He", "She", "They", "Other"]'></litter-g>
     <ul>
         <script nomodule>
             html`${input.map(i => html`<li>${i}</li>`)}`
@@ -32,7 +32,7 @@
             //render
             html`${input.map((item, idx) => html`<li @click="${clickHandler}" id="li_${idx}">${item}</li>`)}`
         </script>
-    </ul> -->
+    </ul>
 
     <litter-g id=mapCoordinates></litter-g>
     <div>
