--- a/test/fly-g.html
+++ b/test/fly-g.html
@@ -12,7 +12,8 @@
             html`${input.map((statement) => html`<a href=https://www.youtube.com/watch?v=W25_jgiY51I><p mark>${statement}</p></a>`)}`
         </script>
     </div>
-    <!-- <litter-g input='["I want money THAT&apos;S WHAT I WANT that&apos;s what I want THAT&apos;S WHAT I WANT"]'></litter-g>
+
+    <litter-g input='["I want money THAT&apos;S WHAT I WANT that&apos;s what I want THAT&apos;S WHAT I WANT"]'></litter-g>
     <div id=lovin>
         <script nomodule data-lit>
             function handleClick(){
@@ -53,8 +54,8 @@
             //render
             tr = (_s1, _s2, _s3) => html`<p id=swallowedBird ?mark="${_s1}" @click="${handleClick2}">${_s1}</p><p ?mark="${_s2}">${_s2}</p><p ?mark="${_s3}">${_s3}</p>`
         </script>
-    </div> -->
-    <!-- <script>
+    </div>
+    <script>
         setTimeout(() =>{
             moneyObsession._s1 = 'Money, lots money';
             moneyObsession._s2 = 'Whole lot of money';
@@ -63,7 +64,7 @@
             }, 1000);
         }, 1000)
         
-    </script>      -->
+    </script>      
     <!-- Use experimental import maps -->
     <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
     <script type="importmap-shim">
